syntax = "proto3";

package orders;

service OrdersService {
  rpc Multiply (SumRequest) returns (SumResponse);
  rpc Add (SumRequest) returns (SumResponse);
}

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 result = 1;
}
